# cli-ai-v2

./: .env.example  ai-cli.py  config.py  http_client.py  pyproject.toml  ssh_client.py  tools.yaml  utils.py
